[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/UITextBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/GoldDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/UI.gd" type="Script" id=6]
[ext_resource path="res://UI/Backpack.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Menus/MainMenu.tscn" type="PackedScene" id=8]

[node name="UI" type="Node2D"]
z_index = 2
script = ExtResource( 6 )

[node name="GoldDisplay" parent="." instance=ExtResource( 5 )]

[node name="UITextBox" parent="." instance=ExtResource( 1 )]

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="Backpack" parent="." instance=ExtResource( 7 )]

[node name="MainMenu" parent="." instance=ExtResource( 8 )]
